# blackjack_q_learning

./: .gitignore  README.md  blackjack.ipynb  blackjack_agent.py  pyproject.toml  requirements.txt
articles/: article_en.md  article_ru.md
experiments/: beat_casino.py  bet_sizing.py  positive_ev.py  train.py
notebooks/: blackjack.ipynb
results/data/: bet_sizing_results.csv  positive_ev_by_count.csv  positive_ev_summary.csv  rewards.csv
src/blackjack_rl/: __init__.py  agent.py  envs.py
