[project]
name = "blackjack-rl"
version = "0.1.0"
description = "Tabular Q-learning for Blackjack across rule variants, with card counting and bet sizing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium==1.3.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "scipy==1.18.0",
    "tqdm==4.68.3",
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackjack_rl"]

[tool.uv]
# Library code lives under src/; uv installs the project editable into .venv,
# so `import blackjack_rl` works from experiments/ and notebooks/.
package = true
